--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
   </head>
   <body>
 
+    <div class="container">
+    </div>
 
-  <!-- Third Party Scripts -->
-  <script src="bower_components/commonjs-require/commonjs-require.js"></script>
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/underscore/underscore.js"></script>
-  <script src="bower_components/handlebars/handlebars.js"></script>
-  <script src="bower_components/backbone/backbone-min.js"></script>
+    <!-- Third Party Scripts -->
+    <script src="bower_components/commonjs-require/commonjs-require.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/handlebars/handlebars.js"></script>
+    <script src="bower_components/backbone/backbone-min.js"></script>
 
-  <!-- Application Scripts -->
-  <script src="dist/scripts/templates.js"></script>
-  <script src="dist/scripts/app.js"></script>
-  <script>
-    require('main');
-  </script>
-
-</body>
+    <!-- Application Scripts -->
+    <script src="dist/scripts/templates.js"></script>
+    <script src="dist/scripts/app.js"></script>
+    <script>
+      require('main');
+    </script>
+  </body>
 </html>
