Add dynamic data to DOM using templates Re-add float: right property to order container element

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   </head>
   <body>
 
-    <div class="container">
-    </div>
+    <section class="menu">
+    </section>
+    <sidebar class="order">
+    </sidebar>
 
     <!-- Third Party Scripts -->
     <script src="bower_components/commonjs-require/commonjs-require.js"></script>
