--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   </head>
   <body>
 
-    <section class="menu">
+    <div class="main-container"></div>
+    <!-- <section class="menu">
     </section>
     <sidebar class="order">
-    </sidebar>
+    </sidebar> -->
 
     <!-- Third Party Scripts -->
     <script src="bower_components/commonjs-require/commonjs-require.js"></script>
