Add showView function within router.js that will be called by menu and items to show those views on the same part of page dynamically

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </head>
   <body>
 
-    <div class="main-container"></div>
-    <!-- <section class="menu">
+    <!--<div class="main-container"></div> -->
+    <section class="menu">
     </section>
     <sidebar class="order">
-    </sidebar> -->
+    </sidebar>
 
     <!-- Third Party Scripts -->
     <script src="bower_components/commonjs-require/commonjs-require.js"></script>
