--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   </head>
   <body>
 
-    <!--<div class="main-container"></div> -->
-    <section class="menu">
-    </section>
-    <sidebar class="order">
-    </sidebar>
+    <div class="main-container">
+      <section class="menu">
+      </section>
+      <sidebar class="order">
+      </sidebar>
+    </div>
 
     <!-- Third Party Scripts -->
     <script src="bower_components/commonjs-require/commonjs-require.js"></script>
