Change media query breakpoint for column stacking to 700px

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   </head>
   <body>
 
-    <div class="main-container">
-      <section class="menu">
-      </section>
-      <sidebar class="order">
-      </sidebar>
+    <div class="container">
+      <div class="row">
+        <section class="menu column two-thirds">
+        </section>
+        <sidebar class="order column one-third">
+        </sidebar>
+      </div>
     </div>
 
     <!-- Third Party Scripts -->
